[Misc] Use Stream.toList() instead of collect(Collectors.toList()) in Live Data (SonarCloud java:S6204)
* Replaces Stream.collect(Collectors.toList()) with Stream.toList() across the
  livedata api, rest and livetable modules, and removes the now-unused
  Collectors imports.
* Since Stream.toList() returns an unmodifiable list, the public Live Data
  model setters that receive such a list now defensively copy it into a new
  ArrayList (LiveDataQuery.setProperties/setSort/setFilters,
  LiveDataMeta.setLayouts, LiveDataPaginationConfiguration.setPageSizes), so
  their getters keep returning a mutable list and the API contract is
  preserved for callers.