@@ -27,7 +27,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Named;
@@ -178,7 +177,7 @@ public class DefaultLiveDataConfigurationResolver implements LiveDataConfigurati
                     .filter(baseConfigLayout -> Objects.equals(baseConfigLayout.getId(), configLayout.getId()))
                     .findFirst()
                     .orElse(configLayout))
-                .collect(Collectors.toList()));
+                .toList());
         }
     }
 
